# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(!defined(current_toolchain), "only for buildconfig context")

zx = "/"

set_default_toolchain("$zx/public/gn/toolchain:stub")

import("$zx/public/gn/buildconfig/toolchain.gni")

foreach(file, toolchain.imports) {
  import(file)
}

host_platform = "${host_os}-${host_cpu}"

host_toolchain = "$zx/public/gn/toolchain:host-${host_platform}-clang"

current_cpu = "arm64"

if (current_cpu == "x64") {
  zircon_cpu = "x86"
} else if (current_cpu != "") {
  zircon_cpu = current_cpu
}

is_kernel = true

if (!defined(is_gcc)) {
  is_gcc = false
}

set_defaults("source_set") {
  configs = []
}
set_defaults("executable") {
  configs = []
}

template("library") {
  assert(invoker.kernel)
  source_set(target_name) {
    forward_variables_from(invoker, "*", ["kernel"])
  }
}
